Implement Phase 14: DB schema alignment with sport-specific tables
- Add 16 new entities (Continent, Country, Football/Baseball League/Team/Board/Post, ActiveBoard, Tag, TagMappings)
- Add 16 new repositories and 2 new enums (TagScope, SportBoardType)
- Split Sport.name into nameKo/nameEn, remove team from Board and Notice
- Delete Team/TeamRepository/TeamResponse/NoticeScope, remove BoardType TEAM/NEWS
- Implement TEAM auto-creation in AdminServiceImpl with Football/Baseball branching
- Add leagueId to RequestProcessRequest and LEAGUE_NOT_FOUND error code
- Update db_sds.md with keycloak_id, PROFILE target_type, REPORT_PROCESSED notification_type
- Update api.md and work_list.md for Phase 14 changes
- All 240 tests passing

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>